upgrade to new PMD version 7
Upgrade maven-pmd-plugin 3.21.2 -> 3.22.0 which uses PMD 7.0 now (for changes see https://docs.pmd-code.org/pmd-doc-7.0.0/pmd_release_notes.html#rule-changes).
Minor changes due to changed rule sets.
Fix or mark some new findings as ignored.